--- a/app/src/main/res/layout/fragment_analyser.xml
+++ b/app/src/main/res/layout/fragment_analyser.xml
@@ -6,4 +6,15 @@
     tools:context=".AnalyserFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/labels"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/micValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </FrameLayout>
