--- a/app/src/main/res/layout/fragment_analyser.xml
+++ b/app/src/main/res/layout/fragment_analyser.xml
@@ -6,15 +6,28 @@
     tools:context=".AnalyserFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/labels"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/micValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    <TextView
+        android:id="@+id/txtInstruction"
+        android:layout_width="match_parent"
+        android:layout_height="175dp"
+        android:gravity="center"
+        android:text="@string/instruction"
+        android:textAlignment="center"
+        android:textSize="36sp" />
+
+    <ch.kurokabe.coronachecker.AudioVisualizer
+        android:id="@+id/audioVisualizer"
+        android:layout_width="380dp"
+        android:layout_height="380dp"
+        android:layout_gravity="center" />
+
+    <pl.droidsonroids.gif.GifTextView
+        android:id="@+id/gifTextView"
+        android:layout_width="380dp"
+        android:layout_height="380dp"
+        android:layout_gravity="center"
+        android:background="@drawable/analyzing"
+        android:visibility="gone"
+        />
 </FrameLayout>
